--- a/static/style.css
+++ b/static/style.css
@@ -1,1 +1,48 @@
+body {
+    width: 100%;
+    height: 100%;
+    background-image: url(bg-img.jpg);
+    /* filter:grayscale(10); */
+    background-repeat: no-repeat;
+    background-position: center 30%;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    background-size: cover;
+    background-attachment: fixed;
+    position: relative;
+    font-family: monospace;
+    color: white;
+    font-size: x-large;
+}
 
+#login {
+    display: flex;
+    padding-top: 100px;
+    color: white;
+    font-family: monospace;
+    z-index: 2;
+    justify-content: center;
+    font-size: larger;
+    align-items: center;
+}
+
+
+
+footer {
+
+    color: black;
+    z-index: 3;
+}
+
+footer a {
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.center {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
