--- a/static/style.css
+++ b/static/style.css
@@ -1,7 +1,7 @@
 body {
     width: 100%;
     height: 100%;
-    background-image: url(bg-img.jpg);
+    background-image: url(background.jpg);
     /* filter:grayscale(10); */
     background-repeat: no-repeat;
     background-position: center 30%;
