--- a/templates/login-hod.html
+++ b/templates/login-hod.html
@@ -22,13 +22,26 @@
 
         <main>
             <div id="login" class="container-fluid text-center pt-5 ">
-                <div class="display-2 my-5">HOD LOGIN</div>
+                <style>
+                    h1 {
+                      font-size: 60px;
+                    }
+                  </style>
+                  
+                <div class="display-2 my-5"><h1>HOD LOGIN</h1></div>
             </div>
             <div>
                 <form action="/login-hod" method="post" id="create-form">
                     <div class="mb-3 mt-3 text-center d-flex justify-content-center">
-
-                        <label for="Login Id">Login Id :</label>
+                        <style>
+                            label {
+                              font-size: 50px;
+                              font-family: Arial, sans-serif;
+                              font-weight: bold;
+                              font-style:simple;
+                            }
+                          </style>
+                        <label for="Login Id" style="font-size: px;">Login Id :</label>
                         <br />
                         <input type="text" class="form-control ml-5" id="id" placeholder="Enter Login Id" name="id"
                             style="width: 400px" required>
@@ -54,7 +67,14 @@
                         {% endif %}
                     </div>
                     <div class="center">
-                        <button type="submit" class="btn btn-primary">Submit</button>
+                        <style>
+                            button {
+                              width: 150px;
+                              height: 45px;
+                              font-size: 20px;
+                            }
+                          </style>
+                        <button type="submit" class="btn btn-primary"><h4>Submit</h4></button>
                     </div>
                 </form>
 
